--- a/.env
+++ b/.env
@@ -1,7 +1,12 @@
 # Environment variables declared in this file are automatically made available to Prisma.
+
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#using-environment-variables
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL and SQLite.
+
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://pmartins:Pegaju!1@localhost:3306/NABC"
+DATABASE_URL="mysql://pmartins_nabc:Pegaju!1@pmartins.a2hosted.com:3306/pmartins_nabc_database"
+
+
+SHADOW_DATABASE_URL="mysql://pmartins_nabc:Pegaju!1@pmartins.a2hosted.com:3306/pmartins_shadow_nabc_database"
