--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.19.4",
     "react-table": "^7.7.0",
     "swr": "^1.0.1"
   },
